# cookiecutters

./: README.md
haskell-nix/: cookiecutter.json
haskell-nix/{{cookiecutter.project_slug}}/: .gitignore  CHANGELOG.md  LICENSE  default.nix  {{cookiecutter.project_name}}.cabal
haskell-nix/{{cookiecutter.project_slug}}/app/: Main.hs
haskell-nix/{{cookiecutter.project_slug}}/bench/: Main.hs
haskell-nix/{{cookiecutter.project_slug}}/nix/: default.nix  overlay.nix  sources.json
haskell-nix/{{cookiecutter.project_slug}}/test/: Main.hs
ts-library/: cookiecutter.json
ts-library/{{cookiecutter.project_slug}}/: README.md  package.json  rollup.config.ts
ts-library/{{cookiecutter.project_slug}}/test/: properties.ts  types.ts
